--- a/templates/page3.html
+++ b/templates/page3.html
@@ -71,17 +71,17 @@
     <img src="/static/images/box_1.png" width="80" class="box1">
     <span class="text_box1">Сундук начала</span>
     <br>
-    <span class="text_box11">Сундук, излучающий загадочный свет <br>Его содержимое связано с истоками магической вселенной</span>
+    <span class="text_box11">Сундук, излучающий <br>загадочный свет</span>
     <div class="coin_container">
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">10</span>
+        <span class="coin_text">1</span>
     </div>
 </div>
 
 <!-- Меню сундука -->
 <div class="fullscreen_menu" id="click_box" style="display: none;">
     <div class="menu_content">
-        <h2>Содержимое сундука:</h2>
+        <h2>Сундук начала</h2>
         <img src="/static/images/box_1.png" alt="Ящик" class="menu_box_image">
         <div class="coin_display">
             <span class="coin_text_2">1000</span>
@@ -95,7 +95,7 @@
 <!-- Меню с выпавшими предметами -->
 <div class="rewards_menu" id="rewardsMenu" style="display: none;">
     <div class="rewards_content">
-        <h2>Выпавший предмет:</h2>
+        <h2>Вы получили:</h2>
         <div id="rewardsItems">
             <!-- Здесь появится один выпавший предмет -->
         </div>
@@ -110,7 +110,7 @@
     <img src="/static/images/box_2.png" width="80" class="box2">
     <span class="text_box2">Призрачный Ларец</span>
     <br>
-    <span class="text_box22">Окутан дымкой, этот ларец будто <br> существует на грани реальности и потустороннего мира</span>
+    <span class="text_box22">Этот ларец будто существует <br> на грани реальности и <br> потустороннего мира</span>
     <div class="coin_container">
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
         <span class="coin_text">1000</span>
@@ -132,7 +132,7 @@
     <img src="/static/images/box_3.png" width="80" class="box3">
     <span class="text_box3">Ящик Звездного Света</span>
     <br>
-    <span class="text_box33">Сияние ящика напоминает бескрайние галактики <br> Его открытие связано с загадками космоса</span>
+    <span class="text_box33"> Его открытие связано с загадками <br> космоса</span>
     <div class="coin_container">
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
         <span class="coin_text">1000</span>
@@ -154,7 +154,7 @@
     <img src="/static/images/box_4.png" width="80" class="box4">
     <span class="text_box4">Сундук Бездны</span>
     <br>
-    <span class="text_box44">Самый редкий сундук, в глубине которого кроется <br> опасная и могущественная сила</span>
+    <span class="text_box44">Самый редкий сундук, в глубине <br> которого кроется опасная <br> и могущественная сила</span>
     <div class="coin_container">
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
         <span class="coin_text">1000</span>
