--- a/templates/page6.html
+++ b/templates/page6.html
@@ -26,6 +26,7 @@
 <p id="score"><span id="currentScore">0</span></p>
 <div class="coin">
     <img src="/static/images/coin.png" alt="Монеты" width="80">
+
 </div>
 
 
@@ -54,49 +55,57 @@
     </a>
 </div>
 
+
 <div class="preview" id="preview">
     <img src="/static/images/croco.png" alt="Preview">
     <p id="preview-name">Character 1</p>
   </div>
-  <div class="menu_char">
-    <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png">
-      <img src="/static/images/croco.png" alt="Character 1">
-      <p>Character 1</p>
-    </div>
-    <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png">
-      <img src="/static/images/cot.png" alt="Character 2">
-      <p>Character 2</p>
-    </div>
-    <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png">
-      <img src="/static/images/groot.png" alt="Character 3">
-      <p>Character 3</p>
-    </div>
-    <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png">
-      <img src="/static/images/golem.png" alt="Character 4">
-      <p>Character 4</p>
-    </div>
-    <div class="character" data-id="5" data-name="Character 5" data-img="/static/images/fire.png">
-      <img src="/static/images/fire.png" alt="Character 5">
-      <p>Character 5</p>
-    </div>
-    <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/water.png">
-      <img src="/static/images/water.png" alt="Character 6">
-      <p>Character 6</p>
-    </div>
-    <div class="character" data-id="7" data-name="Character 7" data-img="https://via.placeholder.com/200">
-      <img src="https://via.placeholder.com/80" alt="Character 7">
-      <p>Character 7</p>
-    </div>
-    <div class="character" data-id="8" data-name="Character 8" data-img="https://via.placeholder.com/200">
-      <img src="https://via.placeholder.com/80" alt="Character 8">
-      <p>Character 8</p>
-    </div>
-    <div class="character" data-id="9" data-name="Character 9" data-img="https://via.placeholder.com/200">
-      <img src="https://via.placeholder.com/80" alt="Character 9">
-      <p>Character 9</p>
-    </div>
+<div class="menu_char">
+  <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png" data-price="10">
+    <img src="/static/images/croco.png" alt="Character 1">
+    <p>Character 1</p>
   </div>
+  <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png" data-price="15">
+    <img src="/static/images/cot.png" alt="Character 2">
+    <p>Character 2</p>
+  </div>
+  <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png" data-price="200">
+    <img src="/static/images/groot.png" alt="Character 3">
+    <p>Character 3</p>
+  </div>
+  <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png" data-price="250">
+    <img src="/static/images/golem.png" alt="Character 4">
+    <p>Character 4</p>
+  </div>
+  <div class="character" data-id="5" data-name="Character 5" data-img="/static/images/fire.png" data-price="300">
+    <img src="/static/images/fire.png" alt="Character 5">
+    <p>Character 5</p>
+  </div>
+  <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/water.png" data-price="350">
+    <img src="/static/images/water.png" alt="Character 6">
+    <p>Character 6</p>
+  </div>
+  <div class="character" data-id="7" data-name="Character 7" data-img="https://via.placeholder.com/200" data-price="400">
+    <img src="https://via.placeholder.com/80" alt="Character 7">
+    <p>Character 7</p>
+  </div>
+  <div class="character" data-id="8" data-name="Character 8" data-img="https://via.placeholder.com/200" data-price="450">
+    <img src="https://via.placeholder.com/80" alt="Character 8">
+    <p>Character 8</p>
+  </div>
+  <div class="character" data-id="9" data-name="Character 9" data-img="https://via.placeholder.com/200" data-price="500">
+    <img src="https://via.placeholder.com/80" alt="Character 9">
+    <p>Character 9</p>
+  </div>
+</div>
 
+<div style="position: absolute; top: 10px; right: 10px; display: flex; align-items: center; gap: 10px;">
+  <div id="character-price" style="display: flex; align-items: center; gap: 5px;">
+    <img src="/static/images/coin.png" alt="Coin" style="width: 20px;">
+    <span id="price-value">0</span>
+  </div>
+  <button id="buy-button">Купить</button>
+</div>
 
 <div class="menu_rare">
     <button onclick="window.location.href='/page6'" class="menu-button">Редкие</button>
