--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,7 @@ body {
     background-repeat: no-repeat; /* Запрет на повторение изображения */
 }
 
+
 .navigation {
     position: fixed;
     bottom: 0; /* Прикрепляем меню к нижней части экрана */
@@ -66,15 +67,45 @@ body {
 
 #clickButton {
     position: absolute;
-    bottom: 110px; /* Расположение от нижней грани */
-    left: 50%; /* Устанавливаем левую границу на 50% ширины родительского элемента */
-    transform: translateX(-50%); /* Сдвигаем элемент влево на 50% его ширины для центрирования */
-    transition: transform 0.5s ease; /* Плавный переход для трансформации */
+    bottom: 110px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: transform 0.5s ease;
 }
 
 #clickButton:active {
-    transform: scale(1.1) translateX(-50%); /* Увеличиваем размер картинки на 10% и сохраняем центрирование */
+    transform: scale(1.1) translateX(-50%);
 }
+
+#coinContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none; /* Чтобы контейнер не блокировал клики */
+}
+
+.coin_drop {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-image: url('/static/images/coin.png'); /* Укажите путь к картинке монеты */
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: flyUp 1s ease-out forwards;
+}
+
+@keyframes flyUp {
+    0% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(-300px) scale(0.5);
+    }
+}
+
 
 @font-face {
     font-family: 'Pusia-bold';
@@ -243,32 +274,6 @@ body {
             display: flex; /* Показываем меню */
         }
 
-progress {
-    position: fixed;
-    bottom: 87px;
-    left: 20px;
-    width: 90%;
-    height: 15px;
-    border: none;
-    background-color: #f3f3f3;
-    border-radius: 10px;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    transition: width 0.3s ease-in-out;
-}
-
-/* Стиль для фона полосы прогресса */
-progress::-webkit-progress-bar {
-    background-color: #e0e0e0;
-    border-radius: 10px;
-}
-
-/* Стиль для самого прогресса (заполненной части) */
-progress::-webkit-progress-value {
-    background-color: #4caf50;
-    border-radius: 10px;
-    transition: width 0.5s ease-in-out;
-}
 
 .open-wheel-img {
     position: fixed;
@@ -1443,4 +1448,70 @@ body.upgrade-page {
     background-color: rgba(255, 255, 0, 0.8); /* Изменение фона при наведении */
 }
 
+.box1 {
+    float: left; /* Изображение будет слева */
+    margin-right: 10px; /* Отступ между изображением и текстом */
+}
 
+.text_box1 {
+    display: inline-block; /* Позволяет тексту выравниваться рядом с изображением */
+    vertical-align: middle; /* Вертикальное выравнивание текста по центру */
+    font-family: 'Pusia-bold', sans-serif; /* Шрифт */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
+    color: white; /* Цвет текста (по желанию) */
+}
+
+.text_box11 {
+    display: block; /* Отображение в блоке, чтобы текст был на новой строке */
+    color: white; /* Цвет текста (по желанию) */
+    margin-top: 5px; /* Отступ сверху для разделения от основного текста */
+    font-size: 12px;
+    font-family: 'Pusia-bold', sans-serif; /* Шрифт */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
+}
+
+.coin_container {
+    display: flex; /* Используем flexbox для выравнивания элементов */
+    align-items: center; /* Вертикальное выравнивание по центру контейнера */
+    justify-content: flex-end; /* Выравнивание по правому краю */
+    position: absolute; /* Абсолютное позиционирование относительно родителя (.box_1) */
+    top: 50%; /* Центрируем по вертикали относительно родителя */
+    transform: translateY(-50%); /* Сдвигаем на половину высоты для точного центрирования */
+    right: 10px; /* Отступ от правого края контейнера */
+}
+
+.coin_icon {
+    margin-left: 10px; /* Отступ слева от текста */
+}
+
+.coin_text {
+    font-family: 'Pusia-bold', sans-serif; /* Шрифт */
+    color: white; /* Цвет текста (по желанию) */
+    font-size: 16px; /* Размер шрифта для текста монет */
+    margin-left: 5px; /* Отступ между иконкой и текстом */
+}
+.coin_display {
+    display: flex; /* Используем flexbox для выравнивания элементов */
+    align-items: center; /* Вертикальное выравнивание по центру */
+    margin-top: 10px; /* Отступ сверху для разделения с изображением ящика */
+}
+
+.buy-button {
+    position: absolute; /* Абсолютное позиционирование внутри контейнера */
+    bottom: 10px; /* Отступ снизу */
+    right: 10px; /* Отступ справа */
+    background-color: #f8b400; /* Цвет фона кнопки */
+    color: white; /* Цвет текста */
+    border: none; /* Убираем рамку */
+    border-radius: 4px; /* Скругление углов */
+    padding: 8px 12px; /* Внутренние отступы */
+    font-family: 'Pusia-bold', sans-serif; /* Шрифт */
+    font-size: 14px; /* Размер шрифта */
+    cursor: pointer; /* Курсор в виде руки */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Тень для кнопки */
+    transition: background-color 0.3s ease; /* Анимация изменения фона */
+}
+
+.buy-button:hover {
+    background-color: #e0a600; /* Цвет фона при наведении */
+}
