--- a/templates/page4.html
+++ b/templates/page4.html
@@ -12,15 +12,15 @@
 </div>
 
 <div class = 'quests_text_2'>
-<p>Боец</p>
+<p>Дополнительные задачи</p>
 </div>
 
 <div class = 'quests_text_3'>
-<p>Легенда</p>
+<p>Игровые задачи</p>
 </div>
 
 <div class="card">
-    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
         <div class="card-title">Подпишись на наш телеграм канал</div>
         <div class="card-amount">
@@ -32,7 +32,7 @@
 </div>
 
 <div class="card_2">
-    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
         <div class="card-title">Пригласи 5 друзей</div>
         <div class="card-amount">
@@ -46,7 +46,7 @@
 <div class="card_3">
     <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
-        <div class="card-title">Открой новый мир</div>
+        <div class="card-title">Подключи свой кошелек</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
             1 500 000
@@ -58,7 +58,7 @@
 <div class="card_4">
     <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
-        <div class="card-title">Победи Босса мира</div>
+        <div class="card-title">Подпишись на телеграмм Павла Дурова</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
             1 500 000
