--- a/templates/page3.html
+++ b/templates/page3.html
@@ -11,15 +11,16 @@
 
 <div class="menu_p3">
     <a href="/page3" class="item">
-        <img src="/static/images/button_menu.png" width="110" alt="Image 1" class="image">
+        <button class="menu-button">Ящики</button>
     </a>
     <a href="/page6" class="item">
-        <img src="/static/images/button_menu_2.png" width="110" alt="Image 2" class="image">
+        <button class="menu-button">Герои</button>
     </a>
     <a href="/page7" class="item">
-        <img src="/static/images/button_menu.png" width="110" alt="Image 3" class="image">
+        <button class="menu-button">Фоны</button>
     </a>
 </div>
+
 
 
 
