--- a/templates/page6.html
+++ b/templates/page6.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Скины</title>
+    <title>Герои</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="heroes-page"> <!-- Добавлен класс friends-page -->
@@ -12,7 +12,10 @@
 </div>
 <p id="nick">Максим</p>
 
-
+<p id="score"><span id="currentScore">0</span></p>
+<div class="coin">
+    <img src="/static/images/coin.png" alt="Монеты" width="80">
+</div>
 <div class="image-container">
     <div class="image-item">
         <span class="image-text">0</span>
@@ -23,11 +26,7 @@
         <img src="/static/images/bling.png" alt="Картинка 2">
     </div>
 </div>
-<p id="score"><span id="currentScore">0</span></p>
-<div class="coin">
-    <img src="/static/images/coin.png" alt="Монеты" width="80">
 
-</div>
 
 
 <div class="dropdown">
@@ -45,13 +44,13 @@
 
 <div class="menu_p3">
     <a href="/page3" class="item">
-        <img src="/static/images/button_menu.png" width="110" alt="Image 1" class="image">
+        <button class="menu-button">Ящики</button>
     </a>
     <a href="/page6" class="item">
-        <img src="/static/images/button_menu_2.png" width="110" alt="Image 2" class="image">
+        <button class="menu-button">Герои</button>
     </a>
     <a href="/page7" class="item">
-        <img src="/static/images/button_menu.png" width="110" alt="Image 3" class="image">
+        <button class="menu-button">Фоны</button>
     </a>
 </div>
 
@@ -61,51 +60,45 @@
     <p id="preview-name">Character 1</p>
   </div>
 <div class="menu_char">
-  <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png" data-price="10">
+  <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png">
     <img src="/static/images/croco.png" alt="Character 1">
     <p>Character 1</p>
   </div>
-  <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png" data-price="15">
+  <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png">
     <img src="/static/images/cot.png" alt="Character 2">
     <p>Character 2</p>
   </div>
-  <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png" data-price="200">
+  <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png">
     <img src="/static/images/groot.png" alt="Character 3">
     <p>Character 3</p>
   </div>
-  <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png" data-price="250">
+  <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png">
     <img src="/static/images/golem.png" alt="Character 4">
     <p>Character 4</p>
   </div>
-  <div class="character" data-id="5" data-name="Character 5" data-img="/static/images/fire.png" data-price="300">
+  <div class="character" data-id="5" data-name="Character 5" data-img="/static/images/fire.png">
     <img src="/static/images/fire.png" alt="Character 5">
     <p>Character 5</p>
   </div>
-  <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/water.png" data-price="350">
+  <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/water.png">
     <img src="/static/images/water.png" alt="Character 6">
     <p>Character 6</p>
   </div>
-  <div class="character" data-id="7" data-name="Character 7" data-img="https://via.placeholder.com/200" data-price="400">
+  <div class="character" data-id="7" data-name="Character 7" data-img="https://via.placeholder.com/200">
     <img src="https://via.placeholder.com/80" alt="Character 7">
     <p>Character 7</p>
   </div>
-  <div class="character" data-id="8" data-name="Character 8" data-img="https://via.placeholder.com/200" data-price="450">
+  <div class="character" data-id="8" data-name="Character 8" data-img="https://via.placeholder.com/200">
     <img src="https://via.placeholder.com/80" alt="Character 8">
     <p>Character 8</p>
   </div>
-  <div class="character" data-id="9" data-name="Character 9" data-img="https://via.placeholder.com/200" data-price="500">
+  <div class="character" data-id="9" data-name="Character 9" data-img="https://via.placeholder.com/200">
     <img src="https://via.placeholder.com/80" alt="Character 9">
     <p>Character 9</p>
   </div>
 </div>
+<button id="select-button">Выбрать</button>
 
-<div style="position: absolute; top: 10px; right: 10px; display: flex; align-items: center; gap: 10px;">
-  <div id="character-price" style="display: flex; align-items: center; gap: 5px;">
-    <img src="/static/images/coin.png" alt="Coin" style="width: 20px;">
-    <span id="price-value">0</span>
-  </div>
-  <button id="buy-button">Купить</button>
-</div>
 
 <div class="menu_rare">
     <button onclick="window.location.href='/page6'" class="menu-button">Редкие</button>
@@ -114,7 +107,7 @@
 </div>
 
 
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
   <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
   <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
   <script src="{{ url_for('static', filename='script_box.js') }}"></script>
