--- a/templates/page11.html
+++ b/templates/page11.html
@@ -7,9 +7,13 @@
 </head>
 <body>
 
-
-
-
+<div class="button-container">
+    <button class="button top">Кнопка сверху</button>
+    <button class="button left">Кнопка слева</button>
+    <button class="button right">Кнопка справа</button>
+    <button class="button bottom">Кнопка снизу</button>
+    <button class="button center">Кнопка посередине</button>
+</div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
       <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
