--- a/templates/page11.html
+++ b/templates/page11.html
@@ -8,11 +8,11 @@
 <body>
 
 <div class="button-container">
-    <button class="button top">Кнопка сверху</button>
-    <button class="button left">Кнопка слева</button>
-    <button class="button right">Кнопка справа</button>
-    <button class="button bottom">Кнопка снизу</button>
-    <button class="button center">Кнопка посередине</button>
+    <button class="button top">Мир 3</button>
+    <button class="button left">Мир 2</button>
+    <button class="button right">Мир 4</button>
+    <button class="button bottom">Мир 1</button>
+    <button class="button center">Мир 5</button>
 </div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
