--- a/templates/page2.html
+++ b/templates/page2.html
@@ -8,8 +8,8 @@
 <body class="friends-page"> <!-- Добавлен класс friends-page -->
 
 <div class="friends_6">
-    <h1>Пригласите друзей</h1>
-    <p>вы и ваш друг получите бонусы</p>
+    <h1>Приглашай друзей</h1>
+    <p>и получай 5% дохода с их покупок</p>
 </div>
 
 <div class="invite-container">
@@ -25,9 +25,8 @@
     </div>
 </div>
  <div class="link">
-      <div class="link_text">Копировать ссылку</div>
+      <div class="link_text">Доход с друзей: 0</div>
     </div>
-
 
 <div class="up_text">
     <p>Список ваших друзей</p>
