--- a/templates/page4.html
+++ b/templates/page4.html
@@ -25,7 +25,7 @@
         <div class="card-title">Подпишись на наш телеграм канал</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            3 200 000
+            50 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
@@ -37,67 +37,67 @@
         <div class="card-title">Пригласи 5 друзей</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            1 500 000
+            100 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
 </div>
 
 <div class="card_3">
-    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
         <div class="card-title">Подключи свой кошелек</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            1 500 000
+            150 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
 </div>
 
 <div class="card_4">
-    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
-        <div class="card-title">Подпишись на телеграмм Павла Дурова</div>
+        <div class="card-title">Подпишись на тг Павла Дурова</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            1 500 000
+            200 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
 </div>
 
 <div class="card_5">
-    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
         <div class="card-title">Сыграй в мини-игру</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            1 500 000
+           30 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
 </div>
 
 <div class="card_6">
-    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
         <div class="card-title">Открой 5 новых миров</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            1 500 000
+            200 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
 </div>
 
 <div class="card_7">
-    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
         <div class="card-title">Достигни 10 уровня</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            1 500 000
+            500 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
