--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -3,24 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Магазин</title>
+    <title>Улучшения</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="shop-page"> <!-- Добавлен класс friends-page -->
-
-<div class="menu_p3">
-    <a href="/page3" class="item">
-        <button class="menu-button">Ящики</button>
-    </a>
-    <a href="/page6" class="item">
-        <button class="menu-button">Герои</button>
-    </a>
-    <a href="/page7" class="item">
-        <button class="menu-button">Фоны</button>
-    </a>
-</div>
-
 
 
 
@@ -95,6 +82,8 @@
 </div>
 
 
+
+
 <div class="box_2" id="box2">
     <img src="/static/images/box_2.png" width="80" class="box2">
     <span class="text_box2">Ящик инструментов</span>
@@ -123,8 +112,8 @@
     <br>
     <span class="text_box33"> Древний таинственный сундук</span>
     <div class="coin_container">
-        <img src="/static/images/stars.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">100</span>
+        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
+        <span class="coin_text">1000</span>
     </div>
 </div>
 
@@ -132,7 +121,7 @@
 <div class="menu" id="menu3" style="display: none;">
     <img src="/static/images/box_3.png" alt="Ящик" class="menu_box_image">
     <div class="coin_display">
-        <span class="coin_text">100</span>
+        <span class="coin_text">1000</span>
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
     </div>
     <button id="buyButton3" class="buy_button">Купить</button>
@@ -145,8 +134,8 @@
     <br>
     <span class="text_box44">Самый редкий сундук <br> во вселенной</span>
     <div class="coin_container">
-        <img src="/static/images/stars.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">300</span>
+        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
+        <span class="coin_text">1000</span>
     </div>
 </div>
 
