--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,46 @@ body {
     background-repeat: no-repeat; /* Запрет на повторение изображения */
 }
 
+  /* Стили для полос */
+.progress-container {
+    position: fixed;
+    bottom: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 280px; /* Фиксированная ширина */
+    height: 20px;
+    background-color: #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.progress-bar {
+    height: 100%;
+    width: 0;
+    background-color: #f4c01c;
+    transition: width 0.3s;
+}
+
+.energy-container {
+    position: fixed;
+    bottom: 100px;
+    left: 10%;
+    transform: translateX(-50%);
+    width: 40px; /* Фиксированная ширина */
+    height: 20px;
+    background-color: #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.energy-bar {
+    height: 100%;
+    width: 100%;
+    background-color: #2196f3;
+    transition: width 0.3s;
+}
+
 
 .navigation {
     position: fixed;
@@ -67,10 +107,11 @@ body {
 
 #clickButton {
     position: absolute;
-    bottom: 110px;
+    bottom: 160px;
     left: 50%;
     transform: translateX(-50%);
     transition: transform 0.5s ease;
+    width: 270px;
 }
 
 #clickButton:active {
@@ -116,14 +157,22 @@ body {
 
 #score {
     position: fixed;
-    top: 60px;
-    left: 185px;
-    width: 40px;
-    height: 40px;
+    top: 68px;
+    left: 200px;
+    width: 50px;
+    height: 50px;
     font-family: 'Pusia-bold', sans-serif; /* Шрифт */
     font-size: 22px; /* Размер шрифта */
     color: white; /* Цвет текста */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
+}
+.coin img {
+    position: fixed;
+    top: 80px;
+    left: 140px;
+    width: 50px;
+    height: 50px;
+
 }
 
 #nick {
@@ -144,14 +193,6 @@ body {
     width: 40px;
     height: 40px;
 
-}
-
-.coin img {
-    position: fixed;
-    top: 80px;
-    left: 125px;
-    width: 40px;
-    height: 40px;
 }
 
 .image-container {
@@ -457,23 +498,8 @@ body {
             right: 160px; /* Сдвиг изображения влево */
         }
 
-#autoClickerButton {
-    display: none; /* Скрываем кнопку по умолчанию */
-    padding: 10px 20px; /* Отступы внутри кнопки */
-    font-size: 14px; /* Размер шрифта */
-    color: white; /* Цвет текста */
-    background-color: #4CAF50; /* Цвет фона кнопки */
-    border: none; /* Убираем рамку */
-    border-radius: 5px; /* Закругленные углы */
-    cursor: pointer; /* Курсор при наведении */
-    transition: background-color 0.3s; /* Плавный переход цвета фона */
-    width: auto; /* Ширина кнопки автоматически подстраивается под содержимое */
-    min-width: 120px; /* Минимальная ширина кнопки для компактности */
-}
 
-#autoClickerButton:hover {
-    background-color: #45a049; /* Цвет фона при наведении */
-}
+
 .open-page5-button {
             position: fixed; /* Фиксированное положение */
             left: 20px; /* Отступ от левого края */
@@ -486,7 +512,22 @@ body {
             cursor: pointer; /* Курсор при наведении */
             z-index: 1000; /* Чтобы кнопка была поверх других элементов */
         }
-    .button-image {
+
+
+.open-up-button {
+    position: fixed; /* Фиксированное позиционирование */
+    left: 40px; /* Отступ от левой стороны окна */
+    bottom: 300px; /* Отступ от нижней части окна */
+    z-index: 1000; /* Убедитесь, что кнопка выше других элементов */
+}
+
+.button-image_up {
+    width: 40px; /* Установите нужный размер изображения */
+    height: 40px; /* Установите нужный размер изображения */
+}
+
+
+.button-image {
 width: 50px; /* Ширина изображения (измените по необходимости) */
 height: auto; /* Автоматическая высота для сохранения пропорций */
 }
@@ -514,7 +555,7 @@ body.friends-page {
 
 .up_text {
 font-size: 30px; /* Размер шрифта для заголовка (больше, чем основной текст) */
-padding-top: 40px; /* Сместить содержимое вниз на 20 пикселей */
+padding-top: 0px; /* Сместить содержимое вниз на 20 пикселей */
 text-align: center; /* Центрирование изображения */
 color: white;
 font-family: 'Pusia-bold', sans-serif; /* Шрифт */
@@ -1350,7 +1391,7 @@ body.heroes-page {
     border-radius: 8px; /* Уменьшаем радиус закругления углов */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); /* Уменьшаем тень для эффекта поднятости */
     position: absolute; /* Позиционирование относительно ближайшего родителя с position: relative */
-    bottom: 270px; /* Уменьшаем отступ от нижней части родительского элемента (по желанию) */
+    bottom: 295px; /* Уменьшаем отступ от нижней части родительского элемента (по желанию) */
     left: 50%; /* Центрирование по горизонтали */
     transform: translateX(-50%); /* Центрирование по горизонтали */
     z-index: 1000; /* Убедитесь, что меню выше других элементов */
